Add login link to application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <nav>
+      <% unless current_user %>
+      <%= link_to 'Sign in with Google', '/auth/google' %>
+      <% end %>
+    </nav>
     <%= yield %>
   </body>
 </html>
