--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,13 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link href="https://fonts.googleapis.com/css?family=News+Cycle:700|Open+Sans&display=swap&subset=latin-ext" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <nav>
-      <% unless current_user %>
-      <%= link_to 'Sign in with Google', '/auth/google' %>
-      <% end %>
-    </nav>
+    <%= render partial: 'shared/nav' %>
     <%= yield %>
   </body>
 </html>
