--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,10 +1,10 @@
 <h1> All Projects </h1>
 
 <div class='projects'>
-  <% @projects.each do |project| %> 
+  <% @projects.each do |project| %>
   <section class="project-<%= project.id %> project-card">
     <p><%= project.title %></p>
-    <img class"thumbnail" src= <%= "#{project.image}" %> alt="", width="200" height="200">
+    <img class"thumbnail" src="<%= project.image %>" alt="", width="200" height="200">
     <ul id="info-<%= project.id %>">
       <li><%= project.date %></li>
       <li><%= project.location.line_1 %></li>
