--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+body {
+  margin: 70px 0 0;
+  padding: 0;
+}
+
 .projects {
   display: flex;
   justify-content: space-between;
