--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav>
   <section class="logo">
-    <a href="/">ArborShare</a>
+    <a href="/"><img src="../img/logo.png">ArborShare</a>
   </section>
   <section class="session_control">
   <% if current_user %>
