--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,9 +17,9 @@
 body {
   margin: 70px 0 0;
   padding: 0;
+  background-color: #FFF8EF;
 }
 
-.projects {
-  display: flex;
-  justify-content: space-between;
+main {
+  margin: 0 20px;
 }
