--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,20 +1,22 @@
-<h1> All Projects </h1>
+<main>
+  <h1>Current Projects</h1>
 
-<div class='projects'>
-  <% @projects.each do |project| %>
-  <section class="project-<%= project.id %> project-card">
-    <p><%= project.title %></p>
-    <img class"thumbnail" src="<%= project.image %>" alt="", width="200" height="200">
-    <ul id="info-<%= project.id %>">
-      <li><%= project.date %></li>
-      <li><%= project.location.line_1 %></li>
-      <li><%= project.location.line_2 %></li>
-      <li><%= project.location.city %>, <%= project.location.state %></li>
-      <li><%= project.location.zip %></li>
-      <li><%= project.description%></li>
-    </ul>
-    <section id="join_button-<%= project.id %>"><%= button_to 'Join Carpool' %>
+  <div class='projects'>
+    <% @projects.each do |project| %>
+    <section class="project-<%= project.id %> project-card">
+      <p><%= project.title %></p>
+      <img class"thumbnail" src="<%= project.image %>" alt="", width="200" height="200">
+      <ul id="info-<%= project.id %>">
+        <li><%= project.date %></li>
+        <li><%= project.location.line_1 %></li>
+        <li><%= project.location.line_2 %></li>
+        <li><%= project.location.city %>, <%= project.location.state %></li>
+        <li><%= project.location.zip %></li>
+        <li><%= project.description%></li>
+      </ul>
+      <section id="join_button-<%= project.id %>"><%= button_to 'Join Carpool' %>
+      </section>
     </section>
-  </section>
-  <% end %>
-</div>
+    <% end %>
+  </div>
+</main>
