--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -1,5 +1,30 @@
 .projects {
   display: flex;
   justify-content: space-between;
-  flex-basis: 22%;
+}
+
+.projects>section {
+  flex-basis: 23%;
+  background-color: #D7EDC2;
+  box-shadow: 0 0 3px;
+}
+
+.projects>section p {
+  margin: 5px;
+  font-family: 'News Cycle', sans-serif;
+  font-size: 20pt;
+  text-align: center;
+}
+
+.projects>section img {
+  display: block;
+  width: 200px;
+  height: 120px;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+.projects>section time {
+  display: inherit;
+  text-align: center;
 }
