--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -5,12 +5,18 @@
 
 .projects>section {
   flex-basis: 23%;
+  width: 23%;
   background-color: #D7EDC2;
   box-shadow: 0 0 3px;
+  box-sizing: border-box;
+  padding: 5px 15px;
 }
 
-.projects>section p {
-  margin: 5px;
+.projects>section * {
+  margin: 0;
+}
+
+.projects>section h3 {
   font-family: 'News Cycle', sans-serif;
   font-size: 20pt;
   text-align: center;
@@ -21,10 +27,14 @@
   width: 200px;
   height: 120px;
   object-fit: cover;
-  margin: 0 auto;
+  margin: 5px auto;
 }
 
 .projects>section time {
   display: inherit;
   text-align: center;
+}
+
+.projects>section p {
+  margin: 5px 0;
 }
