Add user-enrollment selector

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<main>
+<main id="user-enrollment">
   <h1>Tell us about yourself!</h1>
   <%= form_for new_user, method: :create do |f| %>
     <%= tag.img src: new_user.avatar_image, class: "avatar_preview" %>
