--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,14 @@
 <h1> All Projects </h1>
+<section class='sorting'>
+<%= link_to 'Alphabetical', root_path(sort_by: 'a-z') %>
+</section>
 
 <div class='projects'>
   <% @projects.each do |project| %> 
   <section class="project-<%= project.id %> project-card">
+    <ul id="info-<%= project.id %>">
     <p><%= project.title %></p>
     <img class"thumbnail" src= <%= "#{project.image}" %> alt="", width="200" height="200">
-    <ul id="info-<%= project.id %>">
       <li><%= project.date %></li>
       <li><%= project.location.line_1 %></li>
       <li><%= project.location.line_2 %></li>
