--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,7 @@
 <h1> All Projects </h1>
 <section class='sorting'>
 <%= link_to 'Alphabetical', root_path(sort_by: 'a-z') %>
+<%= link_to 'Needs Driver', root_path(sort_by: 'needs_driver') %>
 </section>
 
 <div class='projects'>
