added coming soon link to show page

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,7 @@
 <section class='sorting'>
 <%= link_to 'Alphabetical', root_path(sort_by: 'a-z') %>
 <%= link_to 'Needs Driver', root_path(sort_by: 'needs_driver') %>
+<%= link_to 'Coming Soon', root_path %>
 </section>
 
 <div class='projects'>
