--- a/app/views/shared/_google_login.html.erb
+++ b/app/views/shared/_google_login.html.erb
@@ -1,3 +1,3 @@
-<%= link_to '/auth/google', class: 'goog_login' do %>
+<%= link_to '/auth/google', id: 'Google-login' do %>
   <%= tag.button alt: 'Sign in with Google' %>
 <% end %>
