Add feature test for amdin project show page, add show page

--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -1,1 +1,15 @@
 <h2><%= @project.title %></h2>
+<time datetime="<%= @project.date %>"><%= @project.date.strftime('%A, %b %-d, %Y') %></time>
+<div id="info-<%= @project.id %>">
+  <p>
+    <%= @project.location.line_1 %><br>
+    <%= @project.location.line_2 %><br>
+    <%= @project.location.city %>,
+    <%= @project.location.state %>
+    <%= @project.location.zip %>
+  </p>
+  <h4>Project Description</h4>
+  <span><%= @project.description%></span>
+</div>
+<%= link_to "Delete Project" %>
+<%= link_to "Edit Project" %>
