--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -4,7 +4,7 @@
 
   <% @projects.each do |project| %>
   <section class="project-<%= project.id %>">
-    <h3><%= project.title %></h3>
+    <h3><%= link_to project.title, admin_project_path(project) %></h3>
     <time datetime="<%= project.date %>"><%= project.date.strftime('%A, %b %-d, %Y') %></time>
     <div id="info-<%= project.id %>">
       <p>
