Add feature test for admin project edit

--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -12,5 +12,5 @@
   <h4>Project Description</h4>
   <span><%= @project.description%></span>
 </div>
+<%= link_to "Edit Project", edit_admin_project_path(@project) %>
 <%= link_to "Delete Project" %>
-<%= link_to "Edit Project" %>
