--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,6 +5,28 @@
    <p>Project Details: <%= facade.description %></p>
    <%= link_to 'See this on google maps' %>
 </section>
+
 <section class='drivers'>
   <%= button_to 'Become a Driver' %>
+  <% unless facade.no_rides? %>
+    <section class='carpools'>
+      <% facade.carpools.each do |carpool| %>
+        <section class='carpool-<%= carpool.id %>'>
+          <h3>Driver: <%= carpool.driver_name %></h3>
+          <h4>Available Seats: <%= carpool.available %> of <%= carpool.seats %></h4>
+            <section class='passengers'>
+              <p>Passengers:</p>
+              <ul>
+              <% carpool.passengers.each do |passenger| %>
+                <li><%= link_to passenger.full_name %></li>
+              <% end %>
+              </ul>
+              <% unless carpool.full? %>
+                <%= button_to 'Catch a Ride' %>
+              <% end %>
+          </section>
+        </section>
+      <% end %>
+    </section>
+    <% end %>
 </section>
