--- a/app/views/profile/profile/show.html.erb
+++ b/app/views/profile/profile/show.html.erb
@@ -5,4 +5,16 @@
     <span class="email"><%= user.email %></span>
     <article class="about"><%= user.about %></article>
   </section>
+
+  <section id="addresses">
+  <% user.addresses.each do |address| %>
+    <article class="address<%= " default" if address.default? %>">
+      <span class="line_1"><%= address.line_1 %></span><br>
+      <span class="line_1"><%= address.line_2 %></span><br>
+      <span class="line_1"><%= address.city %></span>,
+      <span class="line_1"><%= address.state %></span>
+      <span class="line_1"><%= address.zip %></span>
+    </article>
+  <% end %>
+  </section>
 </main>
