--- a/app/views/profile/profile/show.html.erb
+++ b/app/views/profile/profile/show.html.erb
@@ -20,4 +20,21 @@
     </article>
   <% end %>
   </section>
+
+  <section id="vehicles">
+  <% user.vehicles.each do |vehicle| %>
+    <article class="vehicle<%= " default" if vehicle.default? %>">
+      <span class="make"><%= vehicle.make %></span><br>
+      <span class="model"><%= vehicle.model %></span><br>
+      <span class="color"><%= vehicle.color %></span><br>
+      <span class="year"><%= vehicle.year %></span>,
+      <span class="passenger_limit">Passenger Limit: <%= vehicle.passenger_limit %></span>
+      <span class="fuel-efficiency"><%= vehicle.fuel_efficiency %> <%= vehicle.fuel_efficiency_unit %></span>
+      <span class="fuel-type"><%= vehicle.fuel_type %></span>
+      <% unless vehicle.default? %>
+      <%= button_to 'Make Default', user_vehicle_path(user, vehicle), method: :patch %>
+      <% end %>
+    </article>
+  <% end %>
+  </section>
 </main>
