Add main links section to nav

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,9 @@
 <nav>
+  <section class="main-links">
+  <% if current_user %>
+    <%= render partial: 'shared/user_links' %>
+  <% end %>
+  </section>
   <section class="logo">
     <a href="/"><img src="/img/logo.png">ArborShare</a>
   </section>
