Adds flash call block to application erb tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
       <%= link_to 'Sign in with Google', '/auth/google' %>
       <% end %>
     </nav>
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: "flash #{key}" %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
