--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -13,4 +13,5 @@
   <span><%= @project.description%></span>
 </div>
 <%= link_to "Edit Project", edit_admin_project_path(@project) %>
-<%= link_to "Delete Project" %>
+<%= link_to "Delete Project", admin_project_path(@project), method: :delete,
+                                                            data: { confirm: "Are you sure?" }%>
