--- a/app/views/profile/profile/show.html.erb
+++ b/app/views/profile/profile/show.html.erb
@@ -39,6 +39,11 @@
         <% end %>
       </article>
     <% end %>
+    <button id="add-a-vehicle">Add a Vehicle</button>
     </section>
   </section>
+
+  <div id="new-vehicle">
+    <%= render partial: 'shared/vehicle_form', locals: { user: user } %>
+  </div>
 </main>
