Add missing passenger limit field to form

--- a/app/views/shared/_vehicle_form.html.erb
+++ b/app/views/shared/_vehicle_form.html.erb
@@ -11,6 +11,9 @@
   <%= f.label :color %>
   <%= f.number_field :color %>
 
+  <%= f.label :passenger_limit %>
+  <%= f.number_field :passenger_limit %>
+
   <%= f.label :fuel_efficiency %>
   <%= f.number_field :fuel_efficiency %>
 
