--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,6 +4,9 @@
   </section>
   <section class="session_control">
   <% if current_user %>
+    <% if current_admin? %>
+      <%= link_to 'Admin Dashboard', admin_dashboard_path %>
+    <% end %>
     <%= link_to 'Logout', '/logout' %>
   <% else %>
     <%= render partial: 'shared/google_login' %>
