--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -92,3 +92,34 @@
   top: 0px;
   right: 0px;
 }
+
+div.hidden {
+  display: none;
+}
+
+.modal {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.8);
+
+  form {
+    display: inline-block;
+    width: 570px;
+    height: 370px;
+    padding: 15px;
+    background-color: #FFF8EF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -200px;
+    margin-left: -300px;
+  }
+
+  h3 {
+    margin-top: 0;
+  }
+}
