Add structural elements to form layouts

--- a/app/views/shared/_address_form.html.erb
+++ b/app/views/shared/_address_form.html.erb
@@ -1,9 +1,10 @@
 <%= form_for :address, url: user_addresses_path(user) do |f| %>
+  <%= tag.h3 'New Address:' %>
   <%= f.label :line_1 %>
-  <%= f.text_field :line_1 %>
+  <%= f.text_field :line_1 %><br>
 
   <%= f.label :line_2 %>
-  <%= f.text_field :line_2 %>
+  <%= f.text_field :line_2 %><br>
 
   <%= f.label :city %>
   <%= f.text_field :city %>
@@ -14,7 +15,7 @@
   <% end %>
 
   <%= f.label :zip %>
-  <%= f.text_field :zip %>
+  <%= f.text_field :zip %><br>
 
   <%= f.submit 'Add this address' %>
 <% end %>
