Fix color field using wrong input type

--- a/app/views/shared/_vehicle_form.html.erb
+++ b/app/views/shared/_vehicle_form.html.erb
@@ -7,7 +7,7 @@
   <%= f.text_field :model %><br>
 
   <%= f.label :color %>
-  <%= f.number_field :color %>
+  <%= f.text_field :color %>
 
   <%= f.label :year %>
   <%= f.number_field :year %><br>
