Adds JS to view and header to load mapbox map along side erb call to center and zoom map on a projects coords visually passes testing
Co-authored-by: Jon Peterson <3322920+joequincy@users.noreply.github.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=News+Cycle:700|Open+Sans&display=swap&subset=latin-ext" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet' />
   </head>
 
   <body>
