Removes unused links and expects from testing.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,7 +4,6 @@
    <img src="<%= facade.image %>" alt="Picture of <%= facade.title %> site">
    <h2>Project Date: <%= facade.date %></h2>
    <p>Project Details: <%= facade.description %></p>
-   <%= link_to 'See this on google maps' %>
 </section>
 
 <section class='map'>
@@ -79,6 +78,6 @@
       <% end %>
   </section>
 <% else %>
-  <h3><%= link_to 'Sign in' %> to become a Driver or join a Carpool!</h3>
+  <h3>Sign in to become a Driver or join a Carpool!</h3>
 <% end %>
 </main>
