Started build out for mailers

--- a/app/views/notification_mailer/notify.html.erb
+++ b/app/views/notification_mailer/notify.html.erb
@@ -5,7 +5,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Bad news, <%= @user.name %>!</h1>
+    <h1>Bad news!</h1>
     <p>
       The carpool for <%= @project.title %> on <%= @project.date %> is cancelled.
     </p>
