Add link to email notifications. Renamed mailer files to match method.
Co-authored-by: Noah Flint <34421236+n-flint@users.noreply.github.com>

--- a/app/views/notification_mailer/driver_cancelled_carpool.html.erb
+++ b/app/views/notification_mailer/driver_cancelled_carpool.html.erb
@@ -10,7 +10,7 @@
       The carpool for <%= @project.title %> on <%= @project.date %> is cancelled.
     </p>
     <p>
-      Please visit <%= @url %> to sign up as a driver or find another ride.
+      Please visit <%= link_to @url, root_url %> to sign up as a driver or find another ride.
     </p>
   </body>
 </html>
