--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,29 +1,45 @@
-<main>
-  <h3>Edit a Project</h3>
+<main id="project-form">
+  <h2>Edit a Project</h2>
   <div class="edit-project-form">
     <%= form_for [:admin, @project], action: :edit do |f| %>
+    <div class="details">
+      <h3>Details</h3>
       <%= f.label :title %>
-      <%= f.text_field :title %>
+      <%= f.text_field :title %><br>
       <%= f.label :date %>
-      <%= f.text_field :date %>
+      <%= f.date_field :date %><br>
       <%= f.label :image %>
-      <%= f.text_field :image %>
-      <%= f.label :description %>
-      <%= f.text_field :description %>
-      <%= tag.label 'Address Line 1', for: 'address_line_1' %>
+      <%= f.text_field :image, 'Image URL' %><br>
+      <%= f.label :active %>
+      <%= f.check_box :active %><br>
+      <%= f.label :description %><br>
+      <%= f.text_field :description %><br>
+      <%= f.submit %>
+    </div>
+    <div class="location">
+      <h3>Location</h3>
+      <div id="location-left">
+      <%= tag.label 'Line 1', for: 'address_line_1' %>
       <%= tag.input type: :text, value: @project.location.line_1, name: 'address[line_1]', id: :address_line_1 %><br>
-      <%= tag.label 'Address Line 2', for: 'address_line_2' %>
+      <%= tag.label 'Line 2', for: 'address_line_2' %>
       <%= tag.input type: :text, value: @project.location.line_2, name: 'address[line_2]', id: :address_line_2 %><br>
       <%= tag.label 'City', for: 'address_city' %>
-      <%= tag.input type: :text, value: @project.location.city, name: 'address[city]', id: :address_city %><br>
+      <%= tag.input type: :text, value: @project.location.city, name: 'address[city]', id: :address_city %>
+      </div>
+      <div id="location-right">
+      <%= tag.label 'Longitude', for: 'address_longitude' %>
+      <%= tag.input type: :text, value: @project.location.longitude, name: 'address[longitude]', id: :address_longitude, readonly: true %><br>
+      <%= tag.label 'Latitude', for: 'address_latitude' %>
+      <%= tag.input type: :text, value: @project.location.latitude name: 'address[latitude]', id: :address_latitude, readonly: true %><br>
+      <%= tag.label 'State', for: 'address_state' %>
       <%= tag.select name: 'address[state]', id: :address_state do %>
         <%= options_for_select(Address.states.map{|opt|opt.first}, selected: @project.location.state) %>
       <% end %>
       <%= tag.label 'Zip', for: 'address_zip' %>
-      <%= tag.input type: :text, value: @project.location.zip, name: 'address[zip]', id: :address_zip %><br>
-      <%= f.label :active %>
-      <%= f.check_box :active %>
-      <%= f.submit %>
+      <%= tag.input type: :text, value: @project.location.zip, name: 'address[zip]', id: :address_zip %>
+      </div>
+      <%= render partial: 'shared/mapbox_address_selector' %>
+    </div>
     <% end %>
   </div>
 </main>
