--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,4 @@
+<main id="project-page">
 <section class='project-show-card'>
    <h1>Project: <%= facade.title %></h1>
    <img src="<%= facade.image %>" alt="Picture of <%= facade.title %> site">
@@ -33,3 +34,4 @@
 <% else %>
   <h3><%= link_to 'Sign in' %> to become a Driver or join a Carpool!</h3>
 <% end %>
+</main>
