Amend submit button selector

--- a/app/views/shared/_mapbox_address_selector.html.erb
+++ b/app/views/shared/_mapbox_address_selector.html.erb
@@ -14,7 +14,8 @@
     geocoder.query(buildAddress())
   })
 
-  document.querySelector("input[type='submit']").addEventListener('click', blockSubmissionWithoutCoords)
+  var submitButton = document.querySelector("#new-address input[type='submit'], #project-form input[type='submit']")
+  submitButton.addEventListener('click', blockSubmissionWithoutCoords)
 
   var map = new mapboxgl.Map({
     container: 'map',
