--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -22,8 +22,7 @@
 
     img {
       display: block;
-      width: 200px;
-      height: 120px;
+      width: 100%;
       object-fit: cover;
       margin: 5px auto;
     }
