--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,11 +1,13 @@
+<main id="admin-project-list">
 <%= link_to 'Add Project', new_admin_project_path %>
 
-  <h1>All Projects</h1>
-
+<h1>All Projects</h1>
+<section class="projects">
   <% @projects.each do |project| %>
   <section class="project-<%= project.id %>">
     <h3><%= link_to project.title, admin_project_path(project) %> Active: <%= project.active %></h3>
     <time datetime="<%= project.date %>"><%= project.date.strftime('%A, %b %-d, %Y') %></time>
+    <img class="thumbnail" src="<%= project.image %>" alt="">
     <div id="info-<%= project.id %>">
       <p>
         <%= project.location.line_1 %><br>
@@ -19,3 +21,5 @@
     </div>
     </section>
   <% end %>
+</section>
+</main>
