--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,13 +5,13 @@
   <%= link_to 'Needs Driver', root_path(sort_by: 'needs_driver') %>
   <%= link_to 'Coming Soon', root_path %>
   </section>
-  
+
   <div class='projects'>
     <% @projects.each do |project| %>
     <section class="project-<%= project.id %> project-card">
       <h3><%= project.title %></h3>
       <time datetime="<%= project.date %>"><%= project.date.strftime('%A, %b %-d, %Y') %></time>
-      <img class"thumbnail" src="<%= project.image %>" alt="", width="200" height="200">
+      <img class="thumbnail" src="<%= project.image %>" alt="">
       <div id="info-<%= project.id %>">
         <p>
           <%= project.location.line_1 %><br>
