Resolve style issues caused by error display

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -115,6 +115,10 @@
       display: inline-block;
       min-width: 80px;
     }
+
+    label[for='project_location_attributes_zip'] {
+      min-width: 0px;
+    }
   }
 }
 
