adds a bit of logic into the view to filter out the carpool link

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -53,7 +53,9 @@
         <% facade.carpools.each do |carpool| %>
           <section class='carpool-<%= carpool.id %>'>
             <h3>Driver: <%= carpool.driver_name %></h3>
-            <p><%= link_to 'View Carpool', carpool_path(carpool) %></p>
+            <% if current_user.in_carpool?(carpool) %>
+              <p><%= link_to 'View Carpool', carpool_path(carpool) %></p>
+            <% end %>
             <h4>Available Seats: <%= carpool.available %> of <%= carpool.seats %></h4>
               <section class='passengers'>
                 <p>Passengers:</p>
