Wrap carpool show page in main tag

--- a/app/views/carpools/show.html.erb
+++ b/app/views/carpools/show.html.erb
@@ -1,3 +1,4 @@
+<main id="carpool">
 <h1>Carpool for <%= facade.project_name %></h1>
 
 <section class='map'>
@@ -47,3 +48,4 @@
     <% end %>
   </ul>
 </section>
+<main>
