Add right margin to carpool cards

--- a/app/assets/stylesheets/carpool.scss
+++ b/app/assets/stylesheets/carpool.scss
@@ -12,6 +12,7 @@
     box-sizing: border-box;
     padding: 5px 15px;
     margin-bottom: 20px;
+    margin-right: 20px;
 
     h3 {
       margin: 0 0 5px;
